--- a/.travis.yml
+++ b/.travis.yml
@@ -33,39 +33,39 @@ matrix:
   allow_failures:
     - env: OPTIONAL=true
   include:
-    - os: linux
-      language: c
-      compiler: clang
-      # gcc also works, but to keep the # of concurrent builds down, we use one C
-      # compiler here and the other to run the coverage build. Clang is preferred
-      # in this instance for its better error messages.
-      env: TESTING=cpython
-      addons:
-        apt:
-          packages:
-            - xvfb
-    - os: linux
-      language: python
-      # Build the docs against a stable version of Python so code bugs don't hold up doc-related PRs.
-      python: 3.6
-      env: TESTING=docs
-      before_script:
-        - cd Doc
-        # Sphinx is pinned so that new versions that introduce new warnings won't suddenly cause build failures.
-        # (Updating the version is fine as long as no warnings are raised by doing so.)
-        # The theme used by the docs is stored separately, so we need to install that as well.
-        - python -m pip install sphinx==1.8.2 blurb python-docs-theme
-      script:
-        - make check suspicious html SPHINXOPTS="-q -W -j4"
-    - os: osx
-      language: c
-      compiler: clang
-      # Testing under macOS is optional until testing stability has been demonstrated.
-      env: OPTIONAL=true
-      before_install:
-        # Python 3 is needed for Argument Clinic and multissl
-        - HOMEBREW_NO_AUTO_UPDATE=1 brew install xz python3
-        - export PATH=$(brew --prefix)/bin:$(brew --prefix)/sbin:$PATH
+    # - os: linux
+    #   language: c
+    #   compiler: clang
+    #   # gcc also works, but to keep the # of concurrent builds down, we use one C
+    #   # compiler here and the other to run the coverage build. Clang is preferred
+    #   # in this instance for its better error messages.
+    #   env: TESTING=cpython
+    #   addons:
+    #     apt:
+    #       packages:
+    #         - xvfb
+    # - os: linux
+    #   language: python
+    #   # Build the docs against a stable version of Python so code bugs don't hold up doc-related PRs.
+    #   python: 3.6
+    #   env: TESTING=docs
+    #   before_script:
+    #     - cd Doc
+    #     # Sphinx is pinned so that new versions that introduce new warnings won't suddenly cause build failures.
+    #     # (Updating the version is fine as long as no warnings are raised by doing so.)
+    #     # The theme used by the docs is stored separately, so we need to install that as well.
+    #     - python -m pip install sphinx==1.8.2 blurb python-docs-theme
+    #   script:
+    #     - make check suspicious html SPHINXOPTS="-q -W -j4"
+    # - os: osx
+    #   language: c
+    #   compiler: clang
+    #   # Testing under macOS is optional until testing stability has been demonstrated.
+    #   env: OPTIONAL=true
+    #   before_install:
+    #     # Python 3 is needed for Argument Clinic and multissl
+    #     - HOMEBREW_NO_AUTO_UPDATE=1 brew install xz python3
+    #     - export PATH=$(brew --prefix)/bin:$(brew --prefix)/sbin:$PATH
     - os: linux
       language: c
       compiler: gcc
@@ -84,7 +84,7 @@ matrix:
         - ./venv/bin/python -m test.pythoninfo
       script:
         # Skip tests that re-run the entire test suite.
-        - xvfb-run ./venv/bin/python -m coverage run --pylib -m test --fail-env-changed -uall,-cpu -x test_multiprocessing_fork -x test_multiprocessing_forkserver -x test_multiprocessing_spawn -x test_concurrent_futures
+        - xvfb-run ./venv/bin/python -m test --fail-env-changed -v test.test_embed
       after_script:  # Probably should be after_success once test suite updated to run under coverage.py.
         # Make the `coverage` command available to Codecov w/ a version of Python that can parse all source files.
         - source ./venv/bin/activate
