--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,7 @@ matrix:
           mv sitecustomize.py venv/lib/python*/site-packages/
       script:
         # Skip tests that re-run the entire test suite.
-        - COVERAGE_PROCESS_START=`pwd`/.coveragerc xvfb-run ./venv/bin/python -m coverage run --pylib -m test --fail-env-changed -uall,-cpu
+        - COVERAGE_PROCESS_START=`pwd`/.coveragerc xvfb-run ./venv/bin/python -m coverage run --pylib -m test -uall,-cpu
       after_script:  # Probably should be after_success once test suite updated to run under coverage.py.
         # Make the `coverage` command available to Codecov w/ a version of Python that can parse all source files.
         - source ./venv/bin/activate
